After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753284 - GtkFileChooser segfault when compiling with clang
GtkFileChooser segfault when compiling with clang
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.17.x
Other FreeBSD
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2015-08-05 15:16 UTC by Ting-Wei Lan
Modified: 2015-08-05 15:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
placesview: Fix wrong property type when creating a GtkLabel (996 bytes, patch)
2015-08-05 15:18 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2015-08-05 15:16:52 UTC
In gtk/gtkplacesview.c, function listbox_header_func:

label = g_object_new (GTK_TYPE_LABEL,
                      "hexpand", TRUE,
                      "use_markup", TRUE,
                      "label", text,
                      "xalign", 0,
                      NULL);

xalign property is a float, but int is used here. This crashes applications using GtkFileChooser on x86_64.
Comment 1 Ting-Wei Lan 2015-08-05 15:18:31 UTC
Created attachment 308797 [details] [review]
placesview: Fix wrong property type when creating a GtkLabel

The type of xalign property of GtkLabel is float, not int. Using wrong type
crashes GtkFileChooser on x86_64 when compiling with clang.
Comment 2 Matthias Clasen 2015-08-05 15:26:19 UTC
Review of attachment 308797 [details] [review]:

good catch, thanks
Comment 3 Ting-Wei Lan 2015-08-05 15:32:16 UTC
Attachment 308797 [details] pushed as 68e00e9 - placesview: Fix wrong property type when creating a GtkLabel